--- a/src/main/java/ui/LoginJFrame.form
+++ b/src/main/java/ui/LoginJFrame.form
@@ -93,7 +93,7 @@
                 </Component>
                 <Component class="javax.swing.JPasswordField" name="txtPassSignin">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="123456"/>
+                    <Property name="text" type="java.lang.String" value="12345678"/>
                   </Properties>
                   <Events>
                     <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtPassSigninKeyPressed"/>
