--- a/src/main/java/ui/ForgotPasswordJDialog.form
+++ b/src/main/java/ui/ForgotPasswordJDialog.form
@@ -153,6 +153,9 @@
               </Layout>
               <SubComponents>
                 <Component class="javax.swing.JTextField" name="txtOmegaAccountEmail">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="690078902233"/>
+                  </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel1">
                   <Properties>
@@ -160,6 +163,9 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtUsernameEmail">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="To Minh Tri"/>
+                  </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel2">
                   <Properties>
@@ -167,6 +173,9 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtEmail">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="tritmps15506@fpt.edu.vn"/>
+                  </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel3">
                   <Properties>
@@ -248,6 +257,9 @@
               </Layout>
               <SubComponents>
                 <Component class="javax.swing.JTextField" name="txtOmegaAccountSMS">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="690078902233"/>
+                  </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel4">
                   <Properties>
@@ -255,6 +267,9 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtUsernameSMS">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="To Minh Tri"/>
+                  </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel5">
                   <Properties>
@@ -262,6 +277,9 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtPhoneSMS">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="0396069932"/>
+                  </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel6">
                   <Properties>
